# open.mp-pawn-native-example

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  main.cpp  test.pwn
